--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
     head
         title FeedReader
         link(rel="stylesheet" href="/bower_components/boostrap/dist/css/bootstrap.css")
+        link(rel="stylesheet" href="/style.css")
     body
         .container
             block content
