--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,9 +4,11 @@ html
         title FeedReader
         link(rel="stylesheet" href="/bower_components/boostrap/dist/css/bootstrap.css")
         link(rel="stylesheet" href="/style.css")
+        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous")
     body
         .container
             block content
-
+        
+        block scripts
         script(src="/bower_components/jquery/dist/jquery.js")
         script(src="/bower_components/boostrap/dist/js/bootstrap.js")
