--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@
 .article-link {
     background-color:#fff;
     border:1px #ccc;
+    cursor: pointer;
 }
 
 .title, .time {
@@ -22,6 +23,8 @@
 
 .author {
     color: #999;
+    padding-top: 2px;
+    margin-left: 2px;
 }
 
 .news-page {
@@ -41,4 +44,8 @@
 
 .news-header-title {
     font-size: 40pt;
+}
+
+.actions {
+    float: right;
 }
